Bug 1816039 - Make `HTMLEditor` handle selection ranges which starts from or ends in `<foo inert>` r=m_kato

According to the WPTs and their result in the other browsers, we should:
* do not work with a range anchored from a node in an element which has `inert`.
* collapse the range first when it ends at a node in an element which has `inert`.

See new WPT for the detail.

Note that `inert` with `contenteditable` must not be so major cases.  Therefore,
this patch does not fix the edge cases like the `nsFrameSelection` use cases
and replacing `Selection` cases of the other edit commands/operations.

Depends on D169037

Differential Revision: https://phabricator.services.mozilla.com/D169743