editor/libeditor/HTMLEditUtils.h
@@ -75,6 +75,19 @@ class HTMLEditUtils final {
   }
 
   /**
+   * Return true if inclusive flat tree ancestor has `inert` state.
+   */
+  static bool ContentIsInert(const nsIContent& aContent) {
+    for (const Element* element :
+         aContent.InclusiveFlatTreeAncestorsOfType<Element>()) {
+      if (element->State().HasState(dom::ElementState::INERT)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /**
    * IsNeverContentEditableElementByUser() returns true if the element's content
    * is never editable by user.  E.g., the content is always replaced by
    * native anonymous node or something.
